# mjson

./: .gitignore  CMakeLists.txt
cmake/: README.md  mjsonConfig.cmake.in
docs/: Doxyfile
src/: mjson.c  mjson.h
test/: .gitignore  CMakeLists.txt  unit_test.c
